--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ requires-python = ">=3.12"
 dependencies = [
     "python-iptables",
     "ipython ~= 9.4.0",
+    "requests ~= 2.32.5",
 ]
 
 [tool.uv.sources]
